get by unique name
